2015-10-07  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getdwarf.c (MAX): Removed.
	(find_prelink_address_sync): Allocate exact amount of bytes for
	phdrs and shdrs.
	* dwfl_segment_report_module.c (dwfl_segment_report_module):
	Likewise for phdrs.
	* elf-from-memory.c (MAX): Removed.
	(elf_from_remote_memory): Allocate exact amount of bytes for phdrs.

2015-10-05  Chih-Hung Hsieh <chh@google.com>

	* dwfl_module_getdwarf.c (find_prelink_address_sync): Do not use
	union of variable length arrays.
	* dwfl_segment_report_module.c (dwfl_segment_report_module): Likewise.
	* elf-from-memory.c (elf_from_remote_memory): Likewise.
	* link_map.c (auxv_format_probe): Likewise.
	* link_map.c (report_r_debug): Likewise.
	* link_map.c (dwfl_link_map_report): Likewise.

2015-09-18  Chih-Hung Hsieh  <chh@google.com>

	* relocate.c (relocate_section): Move nested function "relocate"
	to file scope, pass all used local variables as constants.
	Move nested "check_badreltype" to file scope, pass addresses of
	updated used local variables.
	* linux-kernel-modules.c (intuit_kernel_bounds): Move nested function
	"read_address" to file scope, pass all updated local variables in
	a state structure.
	* linux-kernel-modules.c (dwfl_linux_kernel_find_elf): Move nested
	function "subst_name" to file scope, pass all used local variables
	as constants.
	* linux-kernel-modules.c (dwfl_linux_kernel_report_kernel): Replace
	simple nested function "report" with a macro. Work around gcc static
	analysis error -Werror=maybe-uninitialized.

2015-09-22  Mark Wielaard  <mjw@redhat.com>

	* core-file.c: Remove old-style function definitions.
	* dwfl_error.c: Likewise.
	* dwfl_module_dwarf_cfi.c: Likewise.
	* dwfl_module_eh_cfi.c: Likewise.
	* dwfl_module_register_names.c: Likewise.
	* dwfl_module_return_value_location.c: Likewise.
	* dwfl_version.c: Likewise.

2015-09-09  Chih-Hung Hsieh  <chh@google.com>
	    Mark Wielaard  <mjw@redhat.com>
